fix: keep live-target parsing Java 8 compatible